hard-gists/4178945/run.log
=== Docker Run Log for 4178945 ===
Started at: Mi 29. Okt 14:24:25 CET 2025

[2025-10-29 14:24:25] START: Running container for 4178945
[2025-10-29 14:24:26] SUCCESS: Container 9422162c4e690dfc445b3fc4e52e9e2cf29ce4e383401b9d0cf8e1cf1653d954 started for 4178945
=== Container logs for 4178945 ===
  File "/snippet.py", line 15
    print "Done!"
    ^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4178945 ===
[2025-10-29 14:24:28] INFO: Container 9422162c4e690dfc445b3fc4e52e9e2cf29ce4e383401b9d0cf8e1cf1653d954 has stopped
